# Copyright 2026 The IREE Authors
#
# Licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

# Wasm build infrastructure: freestanding libc and wasm binary bundler tests.

add_subdirectory(libc)
add_subdirectory(test)
